--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,8 +14,11 @@ jobs:
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: eu-central-1
-      # Build inside Docker containers
+          aws-region: ${{ secrets.AWS_REGION }}
+
+      - name: Build inside Docker containers
       - run: mvn package -Pnative
-      # Prevent prompts and failure when the stack is unchanged
-      #- run: sam deploy -t sam.jvm.yaml --no-confirm-changeset --no-fail-on-empty-changeset
+
+      - name: Copy packaged lambda to S3 bucket
+        run: |
+            aws s3 cp target/function.zip s3://${{ secrets.S3_BUCKET }}/${{ github.repository }}/function-${{ github.sha }}.zip
